--- a/i18n/en.yml
+++ b/i18n/en.yml
@@ -50,7 +50,9 @@ new_booking:
   place: Place
   other: Other
   pickup_place: Pickup place
+  pickup_place_required: Pickup place is required
   return_place: Return place
+  return_place_required: Return place is required
   extras: Extras
   extra: Extra
   quantity: Quantity
