--- a/i18n/en.yml
+++ b/i18n/en.yml
@@ -11,6 +11,10 @@ booking_settings:
     deposit: % Diposit
     min_days: Minimum days   
     family: Product type
+    custom_pickup_return_place: Custom pickup/return places
+    payment: Enable online payment
+    general_group: General
+    payment_group: Payment
 booking_status:
   pending_confirmation: Pending
   confirmed: Confirmed
@@ -60,6 +64,7 @@ new_booking:
   conditions_confirm: I have read and accept <a href="%1" target="_blank">their conditions of this service</a>
   continue: Continue
   confirm: Apply for a reservation
+  pay: Confirm
   booking: Select
   payment_methods: Payment methods
   sending_booking_request: Sending booking request
