--- a/i18n/es.yml
+++ b/i18n/es.yml
@@ -11,6 +11,10 @@ booking_settings:
     deposit: % Depósito
     min_days: Numero mínimo de días    
     family: Tipo de producto en alquiler
+    custom_pickup_return_place: Permitir otros lugares de entrega/recogida
+    payment: Habilitar pago online
+    general_group: General
+    payment_group: Pagos
 booking_status:
   pending_confirmation: Pendiente
   confirmed: Confirmado
@@ -60,6 +64,7 @@ new_booking:
   conditions_confirm: He leído y acepto <a href="%1" target="_blank">las condiciones del alquiler</a>
   continue: Continuar
   confirm: Solicitar reserva
+  pay: Confirmar reserva
   booking: Seleccionar
   payment_methods: Formas de pago
   sending_booking_request: Enviando la solicitud de reserva
